Added new beaglebone README.htm content

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "static/bonescript"]
 	path = static/bonescript
 	url = git://github.com/jadonk/bonescript.git
+[submodule "static/beaglebone/latest"]
+	path = static/beaglebone/latest
+	url = git://github.com/jadonk/beaglebone-getting-started
